--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,5 +4,5 @@
 @import "{{ site.theme }}";
 
 .page-header {
-  background-image: "/_images/header.jpg";
+  background-image: "/assets/images/header.jpg";
 }
