--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,5 +8,14 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  color: #111111;
+  color: white;
+  text-shadow:
+   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+     1px 1px 0 #000; 
+}
+.project-tagline {
+  background-color: #000;
+  opacity: 0.7;
 }
